Learn Scaling and Pipelining

--- a/01 - Preprocessing/01_basics.ipynb
+++ b/01 - Preprocessing/01_basics.ipynb
@@ -9,11 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 40,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-17T11:35:18.693743Z",
-     "start_time": "2024-02-17T11:35:18.673663Z"
+     "end_time": "2024-02-17T12:27:29.060584Z",
+     "start_time": "2024-02-17T12:27:29.043728Z"
     }
    },
    "outputs": [],
@@ -32,11 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-17T11:35:18.724328Z",
-     "start_time": "2024-02-17T11:35:18.696958Z"
+     "end_time": "2024-02-17T12:27:29.091892Z",
+     "start_time": "2024-02-17T12:27:29.065352Z"
     }
    },
    "outputs": [
@@ -45,7 +45,7 @@
       "text/plain": "           A     B    C             D\n0   1.000000   6.0  NaN      Purchase\n1   5.857143   7.0  NaN  Not Purchase\n2   5.857143   8.0    A      Purchase\n3   4.000000  10.0    B  Not Purchase\n4   5.000000  10.0  NaN      Purchase\n5   6.000000  11.0    B  Not Purchase\n6   7.000000  10.0    B      Purchase\n7   8.000000  13.0    A  Not Purchase\n8   5.857143  10.0    B      Purchase\n9  10.000000  15.0    A  Not Purchase",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n      <th>C</th>\n      <th>D</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1.000000</td>\n      <td>6.0</td>\n      <td>NaN</td>\n      <td>Purchase</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>5.857143</td>\n      <td>7.0</td>\n      <td>NaN</td>\n      <td>Not Purchase</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>5.857143</td>\n      <td>8.0</td>\n      <td>A</td>\n      <td>Purchase</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4.000000</td>\n      <td>10.0</td>\n      <td>B</td>\n      <td>Not Purchase</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5.000000</td>\n      <td>10.0</td>\n      <td>NaN</td>\n      <td>Purchase</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>6.000000</td>\n      <td>11.0</td>\n      <td>B</td>\n      <td>Not Purchase</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>7.000000</td>\n      <td>10.0</td>\n      <td>B</td>\n      <td>Purchase</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>8.000000</td>\n      <td>13.0</td>\n      <td>A</td>\n      <td>Not Purchase</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>5.857143</td>\n      <td>10.0</td>\n      <td>B</td>\n      <td>Purchase</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>10.000000</td>\n      <td>15.0</td>\n      <td>A</td>\n      <td>Not Purchase</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 25,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,11 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-17T11:35:18.770966Z",
-     "start_time": "2024-02-17T11:35:18.755949Z"
+     "end_time": "2024-02-17T12:27:29.123566Z",
+     "start_time": "2024-02-17T12:27:29.094177Z"
     }
    },
    "outputs": [
@@ -71,7 +71,7 @@
       "text/plain": "           A     B  C             D\n0   1.000000   6.0  B      Purchase\n1   5.857143   7.0  B  Not Purchase\n2   5.857143   8.0  A      Purchase\n3   4.000000  10.0  B  Not Purchase\n4   5.000000  10.0  B      Purchase\n5   6.000000  11.0  B  Not Purchase\n6   7.000000  10.0  B      Purchase\n7   8.000000  13.0  A  Not Purchase\n8   5.857143  10.0  B      Purchase\n9  10.000000  15.0  A  Not Purchase",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n      <th>C</th>\n      <th>D</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1.000000</td>\n      <td>6.0</td>\n      <td>B</td>\n      <td>Purchase</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>5.857143</td>\n      <td>7.0</td>\n      <td>B</td>\n      <td>Not Purchase</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>5.857143</td>\n      <td>8.0</td>\n      <td>A</td>\n      <td>Purchase</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4.000000</td>\n      <td>10.0</td>\n      <td>B</td>\n      <td>Not Purchase</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5.000000</td>\n      <td>10.0</td>\n      <td>B</td>\n      <td>Purchase</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>6.000000</td>\n      <td>11.0</td>\n      <td>B</td>\n      <td>Not Purchase</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>7.000000</td>\n      <td>10.0</td>\n      <td>B</td>\n      <td>Purchase</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>8.000000</td>\n      <td>13.0</td>\n      <td>A</td>\n      <td>Not Purchase</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>5.857143</td>\n      <td>10.0</td>\n      <td>B</td>\n      <td>Purchase</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>10.000000</td>\n      <td>15.0</td>\n      <td>A</td>\n      <td>Not Purchase</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 26,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,11 +94,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-17T11:35:18.786952Z",
-     "start_time": "2024-02-17T11:35:18.773119Z"
+     "end_time": "2024-02-17T12:27:29.139668Z",
+     "start_time": "2024-02-17T12:27:29.125713Z"
     }
    },
    "outputs": [
@@ -107,7 +107,7 @@
       "text/plain": "           A     B    C             D\n0   1.000000   6.0  1.0      Purchase\n1   5.857143   7.0  1.0  Not Purchase\n2   5.857143   8.0  0.0      Purchase\n3   4.000000  10.0  1.0  Not Purchase\n4   5.000000  10.0  1.0      Purchase\n5   6.000000  11.0  1.0  Not Purchase\n6   7.000000  10.0  1.0      Purchase\n7   8.000000  13.0  0.0  Not Purchase\n8   5.857143  10.0  1.0      Purchase\n9  10.000000  15.0  0.0  Not Purchase",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n      <th>C</th>\n      <th>D</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1.000000</td>\n      <td>6.0</td>\n      <td>1.0</td>\n      <td>Purchase</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>5.857143</td>\n      <td>7.0</td>\n      <td>1.0</td>\n      <td>Not Purchase</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>5.857143</td>\n      <td>8.0</td>\n      <td>0.0</td>\n      <td>Purchase</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4.000000</td>\n      <td>10.0</td>\n      <td>1.0</td>\n      <td>Not Purchase</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5.000000</td>\n      <td>10.0</td>\n      <td>1.0</td>\n      <td>Purchase</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>6.000000</td>\n      <td>11.0</td>\n      <td>1.0</td>\n      <td>Not Purchase</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>7.000000</td>\n      <td>10.0</td>\n      <td>1.0</td>\n      <td>Purchase</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>8.000000</td>\n      <td>13.0</td>\n      <td>0.0</td>\n      <td>Not Purchase</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>5.857143</td>\n      <td>10.0</td>\n      <td>1.0</td>\n      <td>Purchase</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>10.000000</td>\n      <td>15.0</td>\n      <td>0.0</td>\n      <td>Not Purchase</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 27,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
       "text/plain": "           A     B    C  D\n0   1.000000   6.0  1.0  1\n1   5.857143   7.0  1.0  0\n2   5.857143   8.0  0.0  1\n3   4.000000  10.0  1.0  0\n4   5.000000  10.0  1.0  1\n5   6.000000  11.0  1.0  0\n6   7.000000  10.0  1.0  1\n7   8.000000  13.0  0.0  0\n8   5.857143  10.0  1.0  1\n9  10.000000  15.0  0.0  0",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>A</th>\n      <th>B</th>\n      <th>C</th>\n      <th>D</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>1.000000</td>\n      <td>6.0</td>\n      <td>1.0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>5.857143</td>\n      <td>7.0</td>\n      <td>1.0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>5.857143</td>\n      <td>8.0</td>\n      <td>0.0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4.000000</td>\n      <td>10.0</td>\n      <td>1.0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5.000000</td>\n      <td>10.0</td>\n      <td>1.0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>6.000000</td>\n      <td>11.0</td>\n      <td>1.0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>7.000000</td>\n      <td>10.0</td>\n      <td>1.0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>8.000000</td>\n      <td>13.0</td>\n      <td>0.0</td>\n      <td>0</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>5.857143</td>\n      <td>10.0</td>\n      <td>1.0</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>10.000000</td>\n      <td>15.0</td>\n      <td>0.0</td>\n      <td>0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 28,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,11 +150,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-17T11:35:18.817655Z",
-     "start_time": "2024-02-17T11:35:18.790080Z"
+     "end_time": "2024-02-17T12:27:29.170575Z",
+     "start_time": "2024-02-17T12:27:29.142825Z"
     }
    },
-   "execution_count": 28
+   "execution_count": 44
   },
   {
    "cell_type": "markdown",
@@ -186,11 +186,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-17T11:35:18.848236Z",
-     "start_time": "2024-02-17T11:35:18.836906Z"
+     "end_time": "2024-02-17T12:27:29.186318Z",
+     "start_time": "2024-02-17T12:27:29.172838Z"
     }
    },
-   "execution_count": 29
+   "execution_count": 45
   },
   {
    "cell_type": "markdown",
@@ -208,7 +208,7 @@
      "data": {
       "text/plain": "array([['Delhi'],\n       ['Mumbai'],\n       ['Kolkata'],\n       ['Hyderabad']], dtype=object)"
      },
-     "execution_count": 30,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,11 +219,55 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-02-17T11:35:18.939977Z",
-     "start_time": "2024-02-17T11:35:18.919777Z"
+     "end_time": "2024-02-17T12:27:29.200694Z",
+     "start_time": "2024-02-17T12:27:29.189733Z"
     }
    },
-   "execution_count": 30
+   "execution_count": 46
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Scaling is a process through which we make sure that all the features are on the same scale. This is important because if the features are not on the same scale, then the model will give more importance to the feature which has a higher scale. There are 2 types of scaling:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "     Salary       Age\n0 -1.566699 -1.566699\n1 -1.218544 -1.218544\n2 -0.870388 -0.870388\n3 -0.522233 -0.522233\n4 -0.174078 -0.174078\n5  0.174078  0.174078\n6  0.522233  0.522233\n7  0.870388  0.870388\n8  1.218544  1.218544\n9  1.566699  1.566699",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Salary</th>\n      <th>Age</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>-1.566699</td>\n      <td>-1.566699</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>-1.218544</td>\n      <td>-1.218544</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>-0.870388</td>\n      <td>-0.870388</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>-0.522233</td>\n      <td>-0.522233</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>-0.174078</td>\n      <td>-0.174078</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>0.174078</td>\n      <td>0.174078</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>0.522233</td>\n      <td>0.522233</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>0.870388</td>\n      <td>0.870388</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>1.218544</td>\n      <td>1.218544</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>1.566699</td>\n      <td>1.566699</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    'Salary': [10000, 20000, 30000, 40000, 50000, 60000, 70000, 80000, 90000, 100000],\n",
+    "    'Age': [20, 25, 30, 35, 40, 45, 50, 55, 60, 65],\n",
+    "})\n",
+    "\n",
+    "sc = StandardScaler()\n",
+    "\n",
+    "df[['Salary', 'Age']] = sc.fit_transform(df[['Salary', 'Age']])\n",
+    "df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-02-17T12:27:29.231105Z",
+     "start_time": "2024-02-17T12:27:29.202950Z"
+    }
+   },
+   "execution_count": 47
   }
  ],
  "metadata": {
